--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -6,10 +6,14 @@
 
   <ItemGroup>
     <None Remove="Resources\config.json" />
+    <None Remove="Resources\mongo.db.config.json" />
   </ItemGroup>
 
   <ItemGroup>
     <EmbeddedResource Include="Resources\config.json" />
+    <EmbeddedResource Include="Resources\mongo.db.config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
   </ItemGroup>
 
   <ItemGroup>
