--- a/Common/Resources/config.json
+++ b/Common/Resources/config.json
@@ -1,3 +1,3 @@
 {
-  "connectionString": "Port=3306;Server=127.0.0.1;Database=union_reporting;user=root"
+  "connectionString": "Port=3306;Server=CMDB-145437;Database=union_reporting;user=INTRANSTION/e.pleskachevsky"
 }
